# insilo

./: .env.example  .gitignore  CLAUDE.md  OlaresManifest.yaml  QUICKSTART.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  auth_api.py  config.py  db.py  errors.py  llm_config.py  locale.py  main.py  speaker_matcher.py  storage.py  worker.py
backend/app/exports/: __init__.py  markdown.py
backend/app/routers/: api_keys.py  audio.py  external_api.py  locale.py  meetings.py  search.py  settings.py  speakers.py  tags.py  templates.py  webhooks.py
backend/app/tasks/: embed.py  notify.py  summarize.py  transcribe.py
backend/tests/: test_error_i18n.py  test_locale_resolution.py  test_speaker_matcher.py
backend/tests/eval/: test_prompt_quality.py
backend/tests/eval/fixtures/: allgemein.yml  jahres.yml  mandanten.yml  vertrieb.yml
backend/tests/exports/: test_markdown.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DESIGN.md  HANDOFF.md  MARKET_SOURCE_PLAYBOOK.md  NEXT_SESSION_STARTER.md  OLARES_DEEP_DIVE.md  ROADMAP.md  SECURITY.md  STYLE_GALLERY_LEGACY.md  WEBHOOKS.md  olares-lernen.html
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  template.tsx
frontend/app/api/health/: route.ts
frontend/app/archiv/: page.tsx
frontend/app/ask/: page.tsx
frontend/app/aufnahme/: page.tsx
frontend/app/besprechungen/: page.tsx
frontend/app/einstellungen/: page.tsx
frontend/app/idee/: page.tsx
frontend/app/m/[id]/: page.tsx
frontend/app/style/: page.tsx
frontend/app/ueber/: page.tsx
frontend/components/: api-key-manager.tsx  cluster-assignment-panel.tsx  locale-switcher.tsx  meeting-dispatch-dialog.tsx  meeting-title-edit.tsx  quick-capture.tsx  recent-meetings.tsx  recording-block.tsx  recording-indicator.tsx  service-worker-register.tsx  speaker-catalog.tsx  status-pill.tsx  summary-view.tsx  tag-filter-bar.tsx  tag-manager.tsx  tag-picker.tsx  tag-pill.tsx  template-prompts.tsx  toast.tsx  transcript-view.tsx  voice-enrollment-dialog.tsx  webhook-manager.tsx
frontend/i18n/: request.ts
frontend/lib/: audio.ts  db.ts  format.ts
frontend/lib/api/: api-keys.ts  ask.ts  client.ts  locale.ts  meetings.ts  settings.ts  speakers.ts  tags.ts  templates.ts  webhooks.ts
frontend/messages/: de.json  en.json  es.json  fr.json  it.json
frontend/public/: manifest.json  sw.js
insilo_new/: .env.example  .gitignore  QUICKSTART.md
insilo_new/backend/app/: main.py
insilo_new/docs/: ARCHITECTURE.md  DESIGN.md  PLATFORM.md  SECURITY.md
insilo_new/frontend/: package.json
insilo_new/frontend/public/: manifest.json
insilo_new/olares/: OlaresManifest.yaml
insilo_new/olares/templates/: deployment-backend.yaml  deployment-embeddings.yaml  deployment-frontend.yaml  deployment-whisper.yaml  deployment-worker.yaml
olares/: Chart.yaml  OlaresManifest.yaml  README.md  values-olares-stub.yaml  values.yaml
olares/files/: 0001_initial_schema.sql  0006_org_speakers.sql  0008_manual_webhooks_template_overrides.sql  0009_template_few_shot.sql  0010_template_custom_fields.sql  seed.sql
olares/templates/: configmap-migrations.yaml  deployment-backend.yaml  deployment-embeddings.yaml  deployment-frontend.yaml  deployment-ollama.yaml  deployment-whisper.yaml  deployment-worker.yaml  job-migrate.yaml  pdb.yaml  services.yaml
scripts/: check-chart.sh  eval-prompts.py  regen-migrations.py  release.sh
services/embeddings/: Dockerfile  pyproject.toml
services/embeddings/app/: main.py
services/whisper/: Dockerfile  pyproject.toml
services/whisper/app/: diarize.py  main.py
supabase/: seed.sql
supabase/migrations/: 0001_initial_schema.sql  0002_rls_policies.sql  0003_org_settings.sql  0004_template_customizations.sql  0005_webhooks_api_keys.sql  0007_speaker_enrollment.sql  0011_ui_locale.sql  0012_template_locale_prompts.sql  0013_drop_legacy_system_prompt.sql
