[project]
name = "insilo-backend"
version = "0.1.0"
description = "On-Premise Meeting-Intelligence Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "supabase>=2.9.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "faster-whisper>=1.0.3",
    "pyannote.audio>=3.3.0",
    "sentence-transformers>=3.2.0",
    "ollama>=0.3.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
