[project]
name = "insilo-backend"
version = "0.1.0"
description = "Insilo Backend - Meeting-Intelligenz API für Olares OS"
authors = [
  { name = "Kai Böhm", email = "kai@kaivo.studio" }
]
license = { text = "Proprietary" }
requires-python = ">=3.11"

dependencies = [
  # Web Framework
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.12",

  # Database
  "asyncpg>=0.30.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.13.0",
  "pgvector>=0.3.0",

  # Cache / Queue
  "redis>=5.2.0",
  "celery>=5.4.0",

  # Object Storage (MinIO über S3-API)
  "boto3>=1.35.0",

  # Validation
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",

  # HTTP Client für interne Service-Calls
  "httpx>=0.27.0",

  # WebSocket
  "websockets>=13.0",

  # Utilities
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "orjson>=3.10.0",
  "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "W", "C4", "UP", "ASYNC"]
# B008: `Depends(...)`, `File(...)`, `Form(...)`, `Header(...)` in default
# arguments is the FastAPI standard pattern, not a bug.
# E501: long lines are fine, we keep some in templates and SQL strings.
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
