[project]
name = "insilo-embeddings"
version = "0.1.0"
description = "Insilo BGE-M3 embedding service — multilingual semantic vectors."
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sentence-transformers>=3.2.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
