[project]
name = "insilo-whisper"
version = "0.1.0"
description = "Insilo Whisper service — faster-whisper + Sprecher-Diarization in einer kleinen FastAPI"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.12",
  "faster-whisper>=1.0.3",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",

  # Speaker diarization (Phase A) — ECAPA-TDNN Embeddings + Clustering.
  # `torch` ist die schwerste Dep (~250 MB CPU-Wheel). SpeechBrain bringt
  # das Voxceleb-Modell zur Laufzeit aus dem öffentlichen Repo nach
  # /app/cache, kein HuggingFace-Token nötig.
  "torch>=2.2.0",
  "speechbrain>=1.0.0",
  "soundfile>=0.12.1",
  "librosa>=0.10.1",
  "scikit-learn>=1.4.0",
  "numpy>=1.26.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
