[project]
name = "insilo-whisper"
version = "0.1.0"
description = "Insilo Whisper service — faster-whisper + Sprecher-Diarization in einer kleinen FastAPI"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.12",
  "faster-whisper>=1.0.3",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",

  # Speaker diarization (Phase A) — 3-Stage-Pipeline ohne HF-Token:
  #   1. Silero-VAD  → Sprach-Aktivität pro Whisper-Segment validieren
  #   2. SpeechBrain ECAPA-TDNN → 192-dim Sprecher-Embedding pro Segment
  #   3. sklearn AgglomerativeClustering → Sprecher-Cluster + Silhouette
  # `torch` ist die schwerste Dep (~250 MB CPU-Wheel). Modelle werden zur
  # Laufzeit nach /app/cache geladen, keine externen Account-Tokens nötig.
  "torch>=2.2.0",
  "speechbrain>=1.0.0",
  "silero-vad>=5.1.0",
  "scikit-learn>=1.4.0",
  "numpy>=1.26.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
